--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+appdirs==1.4.4
 arrow==1.2.2
 asgiref==3.5.2
 attrs==21.4.0
@@ -21,6 +22,7 @@ gunicorn==20.1.0
 importlib-metadata==1.5.0
 inflection==0.3.1
 itypes==1.1.0
+jedi==0.18.1
 Jinja2==2.11.3
 jsonrpcclient==2.0.1
 jsonrpcserver==3.1.1
@@ -33,20 +35,24 @@ mnemonic==0.13
 more-itertools==8.2.0
 mypy-extensions==0.4.3
 packaging==20.3
+parso==0.8.3
 path==13.1.0
 path.py==12.4.0
 pbkdf2==1.3
 pexpect==4.8.0
 pika==1.1.0
 pluggy==0.13.1
+prompt-toolkit==3.0.29
 protobuf==3.0.0a3
 psycopg2-binary==2.9.3
+ptpython==3.0.20
 ptyprocess==0.6.0
 py==1.10.0
 pyaes==1.6.1
 pycodestyle==2.5.0
 pycryptodome==3.14.1
 pyflakes==2.1.1
+Pygments==2.12.0
 pyparsing==2.4.6
 Pypubsub==4.0.3
 pyrsistent==0.15.7
